--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "@date-io/moment": "^1.3.11",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
-    "@material-ui/core": "^4.12.0",
+    "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.59",
     "@material-ui/pickers": "^3.3.10",
@@ -86,6 +86,7 @@
     "react-number-format": "^4.4.1",
     "react-paginate": "^8.1.4",
     "react-perfect-scrollbar": "^1.5.8",
+    "react-phone-number-input": "^3.2.19",
     "react-redux": "^7.2.0",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
