--- a/package.json
+++ b/package.json
@@ -36,13 +36,14 @@
     "cors": "^2.8.5",
     "cross-fetch": "^3.0.5",
     "devextreme": "21.2.6",
-    "devextreme-react": "21.2.6",
+    "devextreme-react": "^21.2.6",
     "dotenv": "^16.0.0",
     "downloadjs": "^1.4.7",
     "draft-js": "^0.11.6",
     "draftjs-to-html": "^0.9.1",
     "emoji-picker-react": "^3.2.1",
     "express": "^4.18.1",
+    "file-saver": "^2.0.5",
     "firebase": "^7.18.0",
     "hammerjs": "^2.0.8",
     "highcharts": "^10.1.0",
